# SCRIBE

./: .gitattributes  .gitignore  CLAUDE.md  DendrogramPlot.py  Dockerfile  Notes.txt  README.md  RF.py  RFMouseHuman.py  RFMouseHumanV2.py  app.py  conftest.py  download_pdac_data.ipynb  geo_data_processing.ipynb  pyproject.toml  requirements.txt  run.py
cellclassifier/: __init__.py  analysis.py  batch.py  cli.py  config.py  data.py  geo.py  model.py  monitor.py  plotting.py
configs/: condition_map.yaml  pipeline.yaml
configs/datasets/: GSE154778.yaml  GSE162708.yaml  GSE165399.yaml
docs/: CODEBASE_GUIDE.md
plans/: config_based_cli.md  unify_datasets_and_train_model.md
scribe/: __init__.py  analysis.py  batch.py  cache.py  cli.py  config.py  data.py  geo.py  model.py  paths.py  plotting.py  zarr_utils.py
scribe/tests/: conftest.py  test_analysis.py  test_batch.py  test_cache_utils.py  test_cli_new_commands.py  test_model.py  test_paths.py  test_plotting.py
tests/: test_batch.py  test_cli.py  test_data.py  test_geo.py  test_refactor.py
web/cache/: cache_manifest.json  combat_hk_expr.parquet  combat_hk_pca.parquet  combat_obs_metadata.parquet  combat_umap.parquet  gene_list.json  harmony_hk_expr.parquet  harmony_hk_pca.parquet  harmony_obs_metadata.parquet  harmony_umap.parquet  hk_pca_meta.json  obs_metadata.parquet  uncorrected_hk_expr.parquet  uncorrected_hk_pca.parquet  uncorrected_umap.parquet
web/plots/hk_analysis/: hk_de_results.csv  selected_hk_genes.txt
