[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scribe"
version = "0.1.0"
description = "Single-Cell RNA Interpretable Biomarker Explorer"
requires-python = ">=3.10"
dependencies = [
    "scanpy>=1.9",
    "anndata>=0.10",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scipy>=1.10",
    "h5py>=3.7",
    "joblib>=1.3",
    "gdown>=5.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "harmonypy>=0.0.9",
    "scanorama>=1.7",
    "psutil>=5.9",
    "zarr>=2.16,<3",
    "marimo>=0.8",
    "pyarrow>=14.0",
]

[tool.setuptools.packages.find]
include = ["scribe*"]

[project.scripts]
scribe = "scribe.cli:main"
